# Pixel_Code

./: .gitignore  LICENSE.md  README.md  parametres.json  pixel_code.py  projects.json  pyproject.toml
pixel_code/: __init__.py  __main__.py  app.py  logo.txt  parametres.json  projects.json
pixel_code/data/: archives.json  parametres.json
pixel_code/script/: __main__.py  app.py  is_update_available.py  keybord.py
pixel_code/script/terminal/: clear_from_line.py
pixel_code/script/util/: get_update.py  translate.py
pixel_code/script/util/terminal/: clear_terminal.py
