[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel-code"
version = "0.1.2"
description = "Pixel_Code - TUI pour gérer et ouvrir des projets"
requires-python = ">=3.8"

[project.scripts]
pixel-code = "pixel_code.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pixel_code = ["*json", "*.txt"]